@@ -38,8 +38,8 @@ namespace iresearch {
 
 class IResearchMMFilesLink final : public arangodb::MMFilesIndex, public IResearchLink {
  public:
-  void afterTruncate(TRI_voc_tick_t /*tick*/) override {
-    IResearchLink::afterTruncate();
+  void afterTruncate(TRI_voc_tick_t tick) override {
+    IResearchLink::afterTruncate(tick);
   };
 
   void batchInsert(
