@@ -38,8 +38,8 @@ namespace iresearch {
 
 class IResearchRocksDBLink final : public arangodb::RocksDBIndex, public IResearchLink {
  public:
-  void afterTruncate(TRI_voc_tick_t /*tick*/) override {
-    IResearchLink::afterTruncate();
+  void afterTruncate(TRI_voc_tick_t tick) override {
+    IResearchLink::afterTruncate(tick);
   }
 
   bool canBeDropped() const override {
