@@ -1,6 +1,9 @@
 v3.5.6 (XXXX-XX-XX)
 -------------------
 
+* Fixed internal issue #742: Add tick storage in index meta payload for
+  ArangoSearch view links after collection truncate operation.
+
 * Fixed: During a MoveShard job which moves the leader there is a situation in
   which the old owner of a shard can reclaim ownership (after having resigned
   already), with a small race where it allows to write documents only locally,
